# Meta_OpenEnv_Hackathon

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  demo.py  experiment_rescue_lab_README.md  inference.py  models.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt  test_reset.sh
envs/: __init__.py
envs/experiment_rescue_lab/: README.md  __init__.py  client.py
envs/experiment_rescue_lab/server/: Dockerfile  __init__.py  app.py  environment.py  grader.py  reward.py  scenarios.py
server/: __init__.py  app.py  config.py  environment.py  grader.py  requirements.txt  reward.py  scenarios.py
tests/: __init__.py  test_env_reset.py  test_env_step.py  test_grader_determinism.py  test_inference_smoke.py  test_package_imports.py
